<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mars_image_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/rover_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="16dp"
        android:text="@string/rover_grid_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_rovers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/rover_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/camera_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        android:text="@string/camera_grid_title"
        app:layout_constraintTop_toBottomOf="@id/rv_rovers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cameras"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/camera_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/sol_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:focusable="true"
        android:hint="@string/sol_hint"
        android:importantForAutofill="no"
        android:background="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="number"
        android:textSize="20sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/get_mars_images"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/get_mars_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/get_images"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

</androidx.constraintlayout.widget.ConstraintLayout>
